   - ofaDBMSRootBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDBMSRootBin: migrate to GResource (todo #826).
   - ofaDossierDeletePrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDossierDeletePrefsBin: migrate to GResource (todo #826).
   - ofaFileDir: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormatBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormatBin: migrate to GResource (todo #826).
   - ofaGuidedInputBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaGuidedInputBin: migrate to GResource (todo #826).
   - ofaGuidedInputBin: return if dispose_has_run fails (todo #995).
   - ofaHub: migrate to G_ADD_PRIVATE (todo #994).
   - ofa_idate_filter_setup_bin(): use a GResource path.
   - ofaIPrefsPage: have an error message on init() and apply() methods.
   - ofoLedgerBookRender: migrate to G_ADD_PRIVATE (todo #994).
   - ofoLedgerClose: migrate to G_ADD_PRIVATE (todo #994).
   - ofoLedgerClose: migrate to GResource (todo #826).
   - ofoLedgerSummaryRender: add date selection as a subtitle (todo #1032).
   - ofoLedgerSummaryRender: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlConnect: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlEditorDisplay: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlEditorDisplay: migrate to GResource (todo #826).
   - ofaMysqlEditorEnter: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlEditorEnter: migrate to GResource (todo #826).
   - ofaMysqlMeta: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPeriod: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPrefsBin: migrate to GResource (todo #826).
   - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPreferences: move user interface to GResource (todo #826).
   - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).